
[project]
name = "sae-vis"
version = "0.3.6"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "armaan@git+https://github.com/armaan-abraham/tools.git",
    "mlsae@git+https://github.com/armaan-abraham/mlsae@master",
    "sae-lens@git+https://github.com/jbloomAus/SAELens",
    "torch>=2.0.0",
    "einops>=0.7.0",
    "datasets>=2.0.0",
    "dataclasses-json>=0.6.4",
    "jaxtyping>=0.2.28",
    "transformer-lens>=2.0.0,<3.0.0",
    "eindex-callum>=0.1.0",
    "rich>=13.7.1",
    "matplotlib>=3.8.4",
    "frozendict>=2.4.6",
    "tabulate>=0.9.0",
]
